[tool.poetry]
name = "facade-aretiico-dev"
version = "0.1.0"
description = ""
authors = ["ataylor\t <agstaylor@gmail.com>"]
readme = "README.md"
packages = [{include = "facade"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
argparse = "^1.4.0"
requests = "^2.28.2"
zeep = "^4.2.1"
marshmallow = "^3.19.0"
flask-expects-json = "^1.7.0"
cryptography = "^39.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
